--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Favorite Movies</title>
     <link rel="stylesheet" href="./assets/css/style.min.css" />
-    <script src="assets/scripts/app.js" defer></script>
+    
   </head>
   <body>
     <div id="backdrop"></div>
@@ -48,5 +48,7 @@
       </section>
       <ul id="movie-list"></ul>
     </main>
+
+    <script src="assets/scripts/app.js"></script>
   </body>
 </html>
